<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>
    <string name="download_notification_channel_id" translatable="false">download_channel</string>
    <string name="download_notification_channel_name" translatable="true">Download</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_radio_button_text">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_radio_button_text">Current repository by Udacity</string>
    <string name="retrofit_radio_button_text">Retrofit - Type-safe HTTP client for Android and Java By Square, Inc</string>
    <string name="please_select_file">Please select the file to download</string>
    <string name="download">Download</string>
    <string name="we_are_loading">We are loading</string>
    <string name="see_detail">See download detail</string>
    <string name="loadapp_notification_channel_description">Download complete</string>
    <string name="file_name">File name:</string>
    <string name="download_status">Status:</string>
    <string name="download_completed">Download Completed</string>
    <string name="download_status_content_description">Download status</string>
    <string name="unknown">Unknown</string>
</resources>
