<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/activity_main">

        <View
            android:id="@+id/header_view"
            android:layout_width="0dp"
            android:layout_height="208dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/download_radio_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/custom_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_view">

            <RadioButton
                android:id="@+id/glide_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/glide_radio_button_text"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

            <RadioButton
                android:id="@+id/loadapp_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/loadapp_radio_button_text"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <RadioButton
                android:id="@+id/retrofit_radio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/retrofit_radio_button_text"
                android:textColor="@color/colorPrimaryDark"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
        </RadioGroup>

        <com.udacity.LoadingButton
            android:id="@+id/custom_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:onClick="onLoadingButtonClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:lbBusyBackgroundColor="?attr/colorPrimaryDark"
            app:lbBusyText="@string/we_are_loading"
            app:lbStartBackgroundColor="?attr/colorPrimary"
            app:lbStartText="@string/download"
            app:lbTextColor="@android:color/white"
            app:lbProgressCircleColor="?attr/colorAccent"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="106dp"
            app:layout_constraintBottom_toBottomOf="@+id/header_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_cloud_download" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>